# Spice-Engine

./: CMakeLists.txt  README.md  spice_build.sh
src/: main.cpp  prototype.h
src/containers/: image.h  matrix.h  pixel.h  tensor.h
src/file_formats/: pbm.h
src/graph/: graph.h  node.h  node_io.h  observable.h  rx_function.hpp
src/graph/node/: node.hpp
src/reactive/: observable.h
tests/: prototype.test.cpp
tests/_data/: checker_3x3.pbm
tests/containers/: matrix.test.cpp  pixel.test.cpp  tensor.test.cpp
tests/file_formats/: pbm.test.cpp
tests/graph/: graph.test.cpp  node.test.cpp  node_io.test.cpp  observable.test.cpp  rx_function.test.cpp
tests/reactive/: observable.test.cpp
